Added Flex & Grid assignment page

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 Mijn focus ligt vooral op design en SEO. Ik ben goed in HTML en CSS en ik
                 werk graag met AI. Met tools zoals n8n maak ik complete workflows om bedrijven
                 te helpen hun processen te automatiseren.
+                <a href="flex-grid.html">Opdracht 4: Flex &amp; Grid</a>
             </p>
             <div class="skills-container">
                 <div class="skill-badge">SEO</div>
